scrapper civics + empire designs

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -2035,6 +2035,17 @@ l_english:
 	mod_job_tec_labrat_per_pop:0 "§G+1§! $job_tec_labrat$ Job Per $VALUE$ Pops"
 	mod_job_tec_labrat_per_pop_short:0 "\n§G+1§! £mod_job_tec_labrat_add£ per $VALUE$ £pop£"
  # /
+ # Scrappers
+	job_tec_scrapper:0 "Scrapper"
+	job_tec_scrapper_plural: "Scrappers"
+	job_tec_scrapper_desc:0 "Anything left unsupervised for too long will eventually be hijacked and dismantled by these avid scrappers, searching usable material to provide the empire with the best of the best (substracted or not)."
+	job_tec_scrapper_effect_desc:0 "£job_tec_scrapper£ $job_tec_scrapper_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_alloys$§!, also generating a small amount of §Y$tec_loc_crime$§!."
+	job_tec_scrapper_effect_desc_corporate:0 "£job_tec_scrapper£ $job_tec_scrapper_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_alloys$§!, also generating a small amount of §Y$tec_loc_crime$§!."
+	job_tec_scrapper_effect_desc:0 "£job_tec_scrapper£ $job_tec_scrapper_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_research_resources$§!, also generating a small amount of §Y$tec_loc_crime$§!."
+	mod_job_tec_scrapper_add:0 "$job_tec_scrapper$ Jobs"
+	mod_job_tec_scrapper_per_pop:0 "§G+1§! $job_tec_scrapper$ Job Per $VALUE$ Pops"
+	mod_job_tec_scrapper_per_pop_short:0 "\n§G+1§! £mod_job_tec_scrapper_add£ per $VALUE$ £pop£"
+ # /
  # Forced Reeducation
 	building_tec_reeducation_facility:0 "Reeducation Facility"
 	building_tec_reeducation_facility_plural:0 "Reeducation Facilities"
