--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1288,6 +1288,21 @@
 		# 
 	# /
 
+	# Foundry half swap
+	 # Scrappers
+		civic_tec_regular_metallurgists_scrappers:0 "§P£tec_civic_job£§!Scrap Recyclers"
+		civic_tec_regular_metallurgists_scrappers_desc:0 "['concept_tec_job_addition_civic_metallurgist']\n\nThe common saying ''One man's trash is another man's treasure'' is something this society took very seriously, trying to adquire and repurpose any scrap found, wether if it belongs to the scrapper or to an unwary individual."
+		civic_tec_regular_metallurgists_scrappers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job£ Avid Scrappers§!\n£district£ §YIndustrial Districts§! provide additional  ['concept_tec_worker_job_tec_scrapper_icon'] jobs, which produce §Y$tec_loc_alloys$§! using a small amount of $tec_loc_amenities$ and producing a small amount of §Y$tec_loc_crime$§!.\n\n$tec_loc_c_gameplay_alteration$ §H£alloys£ Alternative Scrapping§!\nCatalytic and Quantum-Forger empires replace the §Y$tec_loc_amenities$§! upkeep of §Y£job_tec_scrapper£ $job_tec_scrapper_plural$§! with a small amount of §Y$tec_loc_food$§! or §Y$tec_loc_energy$§! respectively. Dystopian empires replace it with extra §Y$tec_loc_crime$§!.\n\n$tec_loc_c_modifiers$\nWhen Debris is Scavenged/Researched:\n- Chance to Salvage Ships: §G+15%§!"
+
+		civic_tec_corporate_metallurgists_scrappers:0 "§P£tec_civic_job£§!Scrap Repurposers"
+		civic_tec_corporate_metallurgists_scrappers_desc:0 "['concept_tec_job_addition_civic_metallurgist']\n\nThe common saying ''One man's trash is another man's treasure'' is something this corporation took very seriously, hiring a corps of volunteer scrappers that try to salvage and recycle everything they found, wether if it belongs to the scrapper or to an unwary ''future customer''."
+		civic_tec_corporate_metallurgists_scrappers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job£ Avid Scrappers§!\n£district£ §YIndustrial Districts§! provide additional ['concept_tec_worker_job_tec_scrapper_icon'] jobs, which produce §Y$tec_loc_alloys$§! using a small amount of $tec_loc_trade$ and producing a small amount of §Y$tec_loc_crime$§!.\n\n$tec_loc_c_gameplay_alteration$ §H£alloys£ Alternative Scrapping§!\n£food£ Catalytic and £energy£ Quantum-Forger empires replace the §Y$tec_loc_amenities$§! upkeep of §Y£job_tec_scrapper£ $job_tec_scrapper_plural$§! with a small amount of §Y$tec_loc_food$§! or §Y$tec_loc_energy$§! respectively. Dystopian empires replace it with extra §Y$tec_loc_crime$§!.\n\n$tec_loc_c_modifiers$\nWhen Debris is Scavenged/Researched:\n- Chance to Salvage Ships: §G+15%§!"
+	 # /
+	# /
+	# Foundry full swap
+		# 
+	# /
+
 	# Enforcers half swap
 	 # Omniguards
 		civic_tec_regular_enforcers_omniguard:0 "§P£tec_civic_job£§!Omni-Centinels"	#NOT DONE
