--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -373,6 +373,16 @@
 		councilor_civic_tec_regular_researchers_starseekers_desc:0 "TO DO"
 		councilor_civic_tec_regular_researchers_starseekers_custom_modifier:0 "TO DO"
 
+		councilor_civic_tec_regular_metallurgists_scrappers:0 "Scrapping Deviser"
+		councilor_civic_tec_regular_metallurgists_scrappers_female:0 "$councilor_civic_tec_regular_metallurgists_scrappers$"
+		councilor_civic_tec_regular_metallurgists_scrappers_desc:0 "$TITLE$s guide the scrappers towards the best production possible."
+		councilor_civic_tec_regular_metallurgists_scrappers_custom_modifier:0 "UNUSED"
+
+		councilor_civic_tec_corporate_metallurgists_scrappers:0 "Scrapping Overseer"
+		councilor_civic_tec_corporate_metallurgists_scrappers_female:0 "$councilor_civic_tec_regular_metallurgists_scrappers$"
+		councilor_civic_tec_corporate_metallurgists_scrappers_desc:0 "The $TITLE$ has the task of obtaining the maximum profit out of recycled and ''obtained'' scrap."
+		councilor_civic_tec_corporate_metallurgists_scrappers_custom_modifier:0 "UNUSED"
+
 		councilor_civic_tec_regular_syndical:0 "Hero of the People"
 		councilor_civic_tec_regular_syndical_female:0 "Heroine of the People"
 		councilor_civic_tec_regular_syndical_desc:0 "The $TITLE$ is entitled with the trust, respect and love of the population, as it ensures everyone is treated with dignity."
