--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -93,7 +93,7 @@
 	auth_tec_ai_corporate_desc:0 "This mega-corporation is not directly governed by a corp of CEOs or business heads, but overseen and tracked by a super efficient Artificial Intelligence, which use a part of the transactional network as its computing network, controlling each economic and vital aspects of the citizens and administration; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
 	TEC_AUTH_AI_CORPORATE_TYPES: "['concept_tec_authority_type_ai_auth'], ['concept_tec_authority_type_corporate_type']\n"
 
-	# Hives
+	# Regular Hives
 	auth_hive_mind:0 "Hive Mind"
 	auth_hive_mind_desc:1 "Hive Minds operate as a single organism more than as a state. The population has no free will, and act as an extension of the Hive Mind itself - much like the limbs of a body.\n\nWhen cut off from the Mind, these drones become comatose and eventually wither and die. Any free individuals on planets owned by the Mind are driven away, killed, or simply treated as prey to feed the collective."
 	TEC_AUTH_HIVE_MIND_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
@@ -103,17 +103,7 @@
 	AUTH_HIVE_MIND_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n\n"
 	AUTH_HIVE_MIND_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides §G+1%§! Menial Drone Output.\n\n"
 
-	auth_tec_hive_cybernetic:0 "Cybernetic Collective"
-	auth_tec_hive_cybernetic_desc:0 "This collective consciousness was formed the moment a cybernetically interconnected network of billions of individuals minds became self aware, developing rudimentary cybernetic implants which ended up transforming the whole species and reshaping its society into a single unique organism of flesh and steel; their desire now is to expand their gift, and resisting it is futile."
-	TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
-	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §YAssimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
-	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
-	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
-	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
-	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §HHigher§! chance of being drawn.\n"
-	AUTH_TEC_HIVE_CYB_AP_PATHS:1 "§ERestriction:§! Following a §HBiological§! or §HReplicant§! ascension path will give the option to replace this authority."
-
+	# Bio Hives
 	auth_tec_hive_biological:0 "Biological Swarm"
 	auth_tec_hive_biological_desc:0 "This Collective Consciousness is formed by the unification of a series of several specialized subspecies under a same mind, genetic data and function, with a higher focus on biological evolution than technological development ;Each drone is an extension of the main consciousness, living and thinking cells of a bigger and expanding body, serving a pre-defined purpose since they are created and until they expire."
 	TEC_AUTH_TEC_HIVE_BIOLOGICAL_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
@@ -127,12 +117,22 @@
 	AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
 	AUTH_TEC_HIVE_BIO_AP_PATHS:1 "§ERestriction:§! Following a §HCybernetic§! or §HReplicant§! ascension path will replace this authority."
 
+	# Cyber Hives
+	auth_tec_hive_cybernetic:0 "Cybernetic Collective"
+	auth_tec_hive_cybernetic_desc:0 "This collective consciousness was formed the moment a cybernetically interconnected network of billions of individuals minds became self aware, developing rudimentary cybernetic implants which ended up transforming the whole species and reshaping its society into a single unique organism of flesh and steel; their desire now is to expand their gift, and resisting it is futile."
+	TEC_AUTH_TEC_HIVE_CYBERNETIC_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_hive_type']\n"
+	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
+	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §YAssimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
+	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
+	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
+	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §HEmpathic§!.\n"
+	AUTH_TEC_HIVE_CYB_NO_SPAWNING_POOLS:1 "§ERestriction:§! Forbids the use of £mod_pop_growth_speed£ §HSpawning Pools§!. Robotic Technologies have §HHigher§! chance of being drawn.\n"
+	AUTH_TEC_HIVE_CYB_AP_PATHS:1 "§ERestriction:§! Following a §HBiological§! or §HReplicant§! ascension path will give the option to replace this authority."
 
 	auth_tec_hive_biomechanical:0 "Biomechanical Simulants"
 	auth_tec_hive_biomechanical_desc:0 "What did you expect here?"
 
-
-
+	# Machines
 	auth_machine_intelligence:0 "Machine Intelligence"
 	auth_machine_intelligence_desc:1 "Machine Intelligences are immense artificial group minds that have been networked into a single conscious entity. Most of the actual ''population'' in such an empire consists of mindless work units who perform their designated tasks without any semblance of free will.\n\nA small number of semi-autonomous agents are typically employed for more specialized tasks that benefit from some degree of independent initiative."
 	TEC_AUTH_MACHINE_INTELLIGENCE_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
@@ -140,6 +140,7 @@
 	AUTH_MACHINE_PRODUCTIVE_BONUS:0 "§EMechanic Bonus:§! Capitals provide a £job_tec_prime_drone£ §H$job_tec_prime_drone$§!, which scales with the planet development.\nCan create §HSpecialized £building£ Capitals§! on regular worlds, which allows fully §HAutomated§! menial planets or §HCentralized§! colonies with boosted Complex Drone output.\n\n"
 	AUTH_MACHINE_TEC_PROCESSCAP:0 "Drones produce and consume £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!; a lack of enough $sr_tec_machine_processing_empire$ will result in §YNegative Output§!, while an excess can be used via §HPolicies§! and §HEdicts§!, or to greatly boost a colony production if §HRedirected§!."
 
+	# Consensus
 	auth_tec_machine_consensus:0 "Synthetic Consensus"
 	auth_tec_machine_consensus_desc:1 "A Synthetic consensus is composed of several co-routinizing advanced swarm intelligences, conforming different aspects of pseudo-artificial networks collaborating to achieve mutual consensus regarding all elaborations, decisions and protocols, perpetuated and maintained individually per group. Most of the ''population'' in such an empire consists of individual platforms with unique programs executing pre-designated task according to their effectivity and consensual programming.\n\nMore advanced platforms, with a higher program load, serve as autonomous and independent agents, working to manifest the will of the collective."
 	TEC_AUTH_TEC_MACHINE_CONSENSUS_TYPES: "['concept_tec_authority_type_gestalt'], ['concept_tec_authority_type_machine_type']\n"
