--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -134,9 +134,11 @@
 	concept_tec_job_addition_civics: "Job Addition Civics"
 	concept_tec_job_addition_civic_desc: "Job addition civics provide a strong-themed job independently of other types of jobs, but generally tied to a specific category (such as researchers, bureaucrats, etc). Generally these civics are not mutually incompatible."
 	concept_tec_job_addition_civic_researcher: "$concept_tec_job_addition_civic$ ($job_researcher$)"
-	concept_tec_job_addition_civics_researchers: "$concept_tec_job_addition_civics$ ($job_researcher$)"
+	concept_tec_job_addition_civics_researcher: "$concept_tec_job_addition_civics$ ($job_researcher$)"
 	concept_tec_job_addition_civic_enforcer: "$concept_tec_job_addition_civic$ ($job_enforcer$)"
-	concept_tec_job_addition_civics_enforcers: "$concept_tec_job_addition_civics$ ($job_enforcer$)"
+	concept_tec_job_addition_civics_enforcer: "$concept_tec_job_addition_civics$ ($job_enforcer$)"
+	concept_tec_job_addition_civic_metallurgist: "$concept_tec_job_addition_civics$ ($job_foundry$)"
+	concept_tec_job_addition_civics_metallurgist: "$concept_tec_job_addition_civics$ ($job_foundry$)"
 
 	concept_tec_basic_civic: "Basic Civic"
 	concept_tec_basic_civics: "Basic Civics"
@@ -1025,6 +1027,14 @@
 	concept_tec_worker_job_tec_labrat_plural: "$job_tec_labrat_plural$"
 	concept_tec_worker_job_tec_labrat_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
 	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_tec_labrats_alias']\n\nIf non-Megacorp:\n$t$$tec_loc_amenities$: §R-2§!\nIf Megacorp:\n$t$$tec_loc_trade_value$: §R-2§!\n$tec_loc_c_produces$: §Y£trigger_tec_research£ 2.5§!"
+
+	concept_tec_worker_job_tec_scrapper: "$job_tec_scrapper$"
+	concept_tec_worker_job_tec_scrapper_alias: "$job_tec_scrapper$"
+	concept_tec_worker_job_tec_scrapper_icon: "£job_tec_scrapper£ $job_tec_scrapper$"
+	concept_tec_worker_job_tec_scrapper_plural: "$job_tec_scrapper_plural$"
+	concept_tec_worker_job_tec_scrapper_plural_icon: "£job_tec_scrapper£ $job_tec_scrapper_plural$"
+	concept_tec_worker_job_tec_scrapper_desc: "§L$job_tec_scrapper_desc$§!\n\n$job_tec_scrapper_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_metallurgists_alias']\n\nIf non-Megacorp:\n$t$$tec_loc_amenities$: §R-2§!\nIf Megacorp:\n$t$$tec_loc_trade_value$: §R-2§!\n$tec_loc_c_produces$: §Y£alloys£ 2§! §Y£crime£ 2§!"
+
 
 	concept_tec_worker_job_tec_reeducated_subject: "$job_tec_reeducated_subject$"
 	concept_tec_worker_job_tec_reeducated_subject_alias: "$job_tec_reeducated_subject$"
