habitat redo decision

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1404,7 +1404,7 @@ l_english:
 
  # ------------------------------------------------- Syndicalism (Job Add)
 	job_tec_labour_hero:0 "Labour Hero"
-	job_tec_labour_hero_plural:0 "Labour Heros"
+	job_tec_labour_hero_plural:0 "Labour Heroes"
 	job_tec_labour_hero_desc:0 "An individual, recognized for his outstanding labour capabilities and capacities to lead others with respect and dignity."
 	job_tec_labour_hero_effect_desc:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ convert $tec_loc_amenities$ (or $tec_loc_trade$) into producing §Y$tec_loc_unity$§! and §Y$tec_loc_basic_resources$§! based on planet designation."
 	mod_job_tec_labour_hero_add:0 "$job_tec_labour_hero$ Jobs"
