--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -995,34 +995,71 @@ l_english:
 	district_tec_hab_arcology_leisure_desc:0 "General use and purpose sections of the Habitat Arcology World left for rest, maintenance or overall caring of the population."
  # /
  # District decisions
-	decision_tec_habitat_unlock_generator:0 "Upgrade Orbital Generators"
-	decision_tec_habitat_unlock_generator_desc:0 "--"
-	decision_tec_habitat_unlock_generator_effects:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of $tec_loc_energy$ Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!\n\n§RThis decision can't be undone§!"
-	decision_tec_habitat_unlock_generator_effects_replace_extraction:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
+	decision_tec_habitat_reform:0 "§B§!Remodularize Habitat"
+	decision_tec_habitat_reform_desc:0 "With some effort and time we will be able readapt the modules of this habitat to suit our needs."
+	decision_tec_habitat_reform_tooltip:0 "Enables the readaptation and unlock of several §Y$tec_loc_districts$§! on [planet.GetName]. Each unlock or swap cost increasing §Y$tec_loc_alloys$§!"
 
-	decision_tec_habitat_unlock_mining:0 "Upgrade Orbital Mining Bays"
-	decision_tec_habitat_unlock_mining_desc:0 "--"
-	decision_tec_habitat_unlock_mining_effects:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_mining$.§!\n\n§RThis decision can't be undone§!"
-	decision_tec_habitat_unlock_mining_effects_replace_extraction:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
+	tec_habitats.100.name:0 "Remodularize Habitat"
+	tec_habitats.100.desc:0 "Select the habitat district that needs a reestructuration on §Y[planet.GetName]§!"
+	tec_habitats.100_exit:0 "Exit"
+	tec_habitats.100_exit_tooltip:0 "Abandons this habitat remodularization menu. For further changes in the £planet£ Habitat, the Remodularize Habitat decision must be enacted again."
+	tec_habitats.100_separator_extraction:0 "============ Extraction Modules ============"
+	tec_habitats.100_separator_utility:0 "============ Utility Module ============"
+	tec_habitats.100_extraction_energy:0 "$district_hab_energy$ - Module"
+	tec_habitats.100_extraction_energy_tooltip:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of $tec_loc_energy$ Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!"
+	tec_habitats.100_extraction_energy_remove:0 "§RRemove $district_hab_energy$ - Module§!"
+	tec_habitats.100_extraction_energy_remove_tooltip:0 "Disables the £district£ $district_hab_generator$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
+	tec_habitats.100_extraction_minerals:0 "$district_hab_mining$ Module"
+	tec_habitats.100_extraction_minerals_tooltip:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_mining$.§!"
+	tec_habitats.100_extraction_minerals_remove:0 "§RRemove $district_hab_mining$ - Module§!"
+	tec_habitats.100_extraction_minerals_remove_tooltip:0 "Disables the £district£ $district_hab_mining$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
+	tec_habitats.100_extraction_food:0 "$district_tec_hab_food$ Module"
+	tec_habitats.100_extraction_food_tooltip:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_tec_hab_food$.§!"
+	tec_habitats.100_extraction_food_remove:0 "§RRemove $district_hab_cultural$ - Module§!"
+	tec_habitats.100_extraction_food_remove_tooltip:0 "Disables the £district£ $district_tec_hab_food$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
+	tec_habitats.100_extraction_amenities:0 "$district_hab_cultural$ - Module"
+	tec_habitats.100_extraction_amenities_tooltip:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_cultural$.§!"
+	tec_habitats.100_extraction_amenities_remove:0 "§RRemove $district_hab_cultural$ - Module§!"
+	tec_habitats.100_extraction_amenities_remove_tooltip:0 "Disables the £district£ $district_hab_cultural$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
+	tec_habitats.100_utility_research:0 "$district_hab_science$ - Utility"
+	tec_habitats.100_utility_research_tooltip:0 "Adds the £district£ $district_hab_science$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_research_resources$§!, based on the number of £trigger_tec_research£ Research Orbitals, and provide §Y£job_researcher£ Researcher§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely."
+	tec_habitats.100_utility_unity:0 "$district_tec_hab_unity$ - Utility"
+	tec_habitats.100_utility_unity_tooltip:0 "Adds the £district£ $district_tec_hab_unity$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_unity$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely.§!"
+	tec_habitats.100_utility_military:0 "$district_tec_hab_military$ - Utility"
+	tec_habitats.100_utility_trade:0 "$district_hab_commercial$ Utility"
+	tec_habitats.100_utility_trade_tooltip:0 "Adds the £district£ $district_hab_commercial$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_trade$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely.§!"
+	tec_habitats.100_utility_military:0 "$district_tec_hab_military$ - Utility"
+	tec_habitats.100_utility_military_tooltip:0 "Adds the £district£ $district_tec_hab_military$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_naval_cap$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely.§!"
 
-	decision_tec_habitat_unlock_farming:0 "Upgrade Orbital Hydroponics"
-	decision_tec_habitat_unlock_farming_desc:0 "--"
-	decision_tec_habitat_unlock_farming_effects:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_tec_hab_food$.§!\n\n§RThis decision can't be undone§!"
-	decision_tec_habitat_unlock_farming_effects_replace_extraction:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
+	# Old decisions
+		decision_tec_habitat_unlock_generator:0 "Upgrade Orbital Generators"
+		decision_tec_habitat_unlock_generator_desc:0 "--"
+		decision_tec_habitat_unlock_generator_effects:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of $tec_loc_energy$ Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_generator_effects_replace_extraction:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
 
- decision_tec_habitat_unlock_trade:0 "Upgrade Trade Module"
- decision_tec_habitat_unlock_trade_desc:0 "--"
- decision_tec_habitat_unlock_trade_effects:0 "Adds the £district£ $district_hab_commercial$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_trade$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_mining:0 "Upgrade Orbital Mining Bays"
+		decision_tec_habitat_unlock_mining_desc:0 "--"
+		decision_tec_habitat_unlock_mining_effects:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_mining$.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_mining_effects_replace_extraction:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
 
- decision_tec_habitat_unlock_research:0 "Upgrade Research Module"
- decision_tec_habitat_unlock_research_desc:0 "--"
- decision_tec_habitat_unlock_research_effects:0 "Adds the £district£ $district_hab_science$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_research_resources$§!, based on the number of £trigger_tec_research£ Research Orbitals, and provide §Y£job_researcher£ Researcher§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_farming:0 "Upgrade Orbital Hydroponics"
+		decision_tec_habitat_unlock_farming_desc:0 "--"
+		decision_tec_habitat_unlock_farming_effects:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_tec_hab_food$.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_farming_effects_replace_extraction:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
 
- decision_tec_habitat_unlock_leisure:0 "Upgrade Leisure Module"
- decision_tec_habitat_unlock_leisure_desc:0 "--"
- decision_tec_habitat_unlock_leisure_effects:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_cultural$.§!\n\n§RThis decision can't be undone§!"
- decision_tec_habitat_unlock_leisure_effects_replace_extraction:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
+		decision_tec_habitat_unlock_trade:0 "Upgrade Trade Module"
+		decision_tec_habitat_unlock_trade_desc:0 "--"
+		decision_tec_habitat_unlock_trade_effects:0 "Adds the £district£ $district_hab_commercial$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_trade$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
 
+		decision_tec_habitat_unlock_research:0 "Upgrade Research Module"
+		decision_tec_habitat_unlock_research_desc:0 "--"
+		decision_tec_habitat_unlock_research_effects:0 "Adds the £district£ $district_hab_science$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_research_resources$§!, based on the number of £trigger_tec_research£ Research Orbitals, and provide §Y£job_researcher£ Researcher§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
+
+		decision_tec_habitat_unlock_leisure:0 "Upgrade Leisure Module"
+		decision_tec_habitat_unlock_leisure_desc:0 "--"
+		decision_tec_habitat_unlock_leisure_effects:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_cultural$.§!\n\n§RThis decision can't be undone§!"
+		decision_tec_habitat_unlock_leisure_effects_replace_extraction:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
+	# /
 
 	decision_tec_orbital_autobuilder_focus_minor:0 "Automate Orbital Assembly - Minor Orbitals"
 	decision_tec_orbital_autobuilder_focus_minor_desc:0 "Priorizes the production of §YMinor Orbitals§! on suitable planets."
