More fixes for the habitat decision

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -961,6 +961,24 @@ l_english:
 	district_hab_commercial_effect_buildings:0 ""
 	district_hab_commercial_effect_orbitals:0 ""
 
+	# Unity
+	district_tec_hab_unity:0 "Orbital Administration"
+	district_tec_hab_unity_plural:0 "$district_tec_hab_unity$s"
+	district_tec_hab_unity_desc:0 "Centralized administrative and logistic centers dominate large sections of this habitat, for easier local and global management of resources."
+	district_tec_hab_unity_effect_production:0 ""
+	district_tec_hab_unity_effect_buildings:0 ""
+	district_tec_hab_unity_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
+	district_tec_hab_unity_effect_orbitals:0 ""
+
+	# Military
+	district_tec_hab_military:0 "Orbital Command"
+	district_tec_hab_military_plural:0 "$district_tec_hab_military$s"
+	district_tec_hab_military_desc:0 "Secure military enclaves and naval docks suit these orbital sections to accomodate a better naval logistic and strategic management."
+	district_tec_hab_military_effect_production:0 ""
+	district_tec_hab_military_effect_buildings:0 ""
+	district_tec_hab_military_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
+	district_tec_hab_military_effect_orbitals:0 ""
+
 	# Arcologies
 	district_tec_hab_arcology_housing:0 "Habitation Module"
 	district_tec_hab_arcology_housing_plural:0 "Habitation Modules"
@@ -1000,7 +1018,7 @@ l_english:
 	decision_tec_habitat_reform_tooltip:0 "Enables the readaptation and unlock of several §Y$tec_loc_districts$§! on [planet.GetName]. Each unlock or swap cost increasing §Y$tec_loc_alloys$§!"
 
 	tec_habitats.100.name:0 "Remodularize Habitat"
-	tec_habitats.100.desc:0 "Select the habitat district that needs a reestructuration on §Y[planet.GetName]§!"
+	tec_habitats.100.desc:0 "Select the habitat district that needs a remodularization on §Y[planet.GetName]§!"
 	tec_habitats.100_exit:0 "Exit"
 	tec_habitats.100_exit_tooltip:0 "Abandons this habitat remodularization menu. For further changes in the £planet£ Habitat, the Remodularize Habitat decision must be enacted again."
 	tec_habitats.100_separator_extraction:0 "-------------- Extraction Modules --------------"
@@ -1034,8 +1052,7 @@ l_english:
 	tec_habitats.100_utility_unity:0 "$district_tec_hab_unity$ - Utility"
 	tec_habitats.100_utility_unity_tooltip:0 "Adds the £district£ $district_tec_hab_unity$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_unity$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely.§!"
 
-	tec_habitats.100_utility_military:0 "$district_tec_hab_military$ - Utility"
-	tec_habitats.100_utility_trade:0 "$district_hab_commercial$ Utility"
+	tec_habitats.100_utility_trade:0 "$district_hab_commercial$ - Utility"
 	tec_habitats.100_utility_trade_tooltip:0 "Adds the £district£ $district_hab_commercial$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_trade$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ or other utility districts entirely.§!"
 
 	tec_habitats.100_utility_military:0 "$district_tec_hab_military$ - Utility"
