More modability inlines, fixed necrowarrios as swaps (nerfed them a bit in exchange) and fixed the private militaries effect

--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -146,7 +146,7 @@
 # /
 # Civics/mechanics
  edict_tec_mortgage_edict:0 "£job_purge£ Eternal Shifts"
- edict_tec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output, but there is a chance of a worker pop §Rdeath§! every year."
+ edict_ec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output and §G20%§! $MOD_TRADE_VALUE_MULT$, but there is a chance of a worker pop §Rdeath§! every year."
 # /
 
 
