more fixes pre-patch

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1401,6 +1401,12 @@
 	civic_tec_corporate_unions:0 "§P£tec_civic_job£§!Mercantile Unions"
 	civic_tec_corporate_unions_desc:0 "['concept_tec_job_addition_civic']\n\nIn this megacorp, organization of workers and clerks have come together to make sure that working-class people are not affected in their rights and opportunities for mercantile and social development." 
 	civic_tec_corporate_unions_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£job£ Efficient Services§!\n£district£ §YMining§!, §YFarming§! and §YGenerator§! Districts provide §G+1§! £job_clerk£ Clerk Job each.\n\n"
+
+	# former civic_distributism
+	civic_tec_regular_distributism:0 "§P£tec_civic_job£§!Distributism"
+	civic_tec_regular_distributism_desc:0 "['concept_tec_job_addition_civic']\n\nAn ideology that makes the case that ethics have a place in market economics. While advocating fundamental rights of private property ownership, it asserts that the means of production should be widely owned and distributed, rather than concentrated in the hands of few individuals or corporations. Thus, it generally favors small-scale entrepreneurs and family businesses, as well as serious anti-monopolist regulations."
+	civic_tec_regular_distributism_tooltip:1 "$tec_loc_c_unlocks_feature$ §H£job£ Distributed Efforts§!\nInstead of £job_clerk£ §Y$job_clerk_plural$§!, $tec_loc_trade$ $tec_loc_districts$ and $tec_loc_buildings$ provide ['concept_tec_worker_job_tec_entepreneur_icon'] jobs, based on the $tec_loc_planet_designation$.\n"
+	#"Can't set up §YFree Market§! policy, build §YGalactic Stock Exchange§! or have §Ytec_mogul§! jobs in general.\n\n"
  # /
 # /
 
@@ -1572,11 +1578,6 @@
 	civic_tec_regular_star_settlers:0 "§R§!Star Settlers" 
 	civic_tec_regular_star_settlers_desc:0 "['concept_tec_basic_civic']\n\nAs the space exploration has begun, this Civilization have been embraced with a strong pioneer's spirit. People tend to vastly expand their territories through peaceful expansion and colonization, resettling as widely as it's possible."
 	civic_tec_regular_star_settlers_tooltip:0 "Starts game with §YStellar Expansion§! technology already unlocked.\n\nCan't set up neither §YMilitary Transportation§! nor §YMilitary Telecommunications§! policy.\n\n"
-
- # former civic_distributism
-	civic_tec_regular_distributism:0 "§R§!Distributism"
-	civic_tec_regular_distributism_desc:0 "['concept_tec_basic_civic']\n\nAn ideology that makes the case that ethics have a place in market economics. While advocating fundamental rights of private property ownership, it asserts that the means of production should be widely owned and distributed, rather than concentrated in the hands of few individuals or corporations. Thus, it generally favors small-scale entrepreneurs and family businesses, as well as serious anti-monopolist regulations.\n\n"
-	civic_tec_regular_distributism_tooltip:1 "Can't set up §YFree Market§! policy, build §YGalactic Stock Exchange§! or have §Ytec_mogul§! jobs in general.\n\n"
 
  # former civic_martial_brotherhood
 	civic_tec_regular_martial_brotherhood:0 "§R§!Martial Brotherhood"
