--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -292,6 +292,14 @@
 	#concept_tec_ruler_job_TEMPLATE_plural_icon: "£job_TEMPLATE£ $job_TEMPLATE_plural$"
 	#concept_tec_ruler_job_TEMPLATE_desc: "$job_TEMPLATE_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_ruler$§!\n$tec_loc_c_produces$:\n\n"
  # /
+ # Definition
+	concept_tec_worker_job_tec_entepreneur: "Entepreneur"
+	concept_tec_worker_job_tec_entepreneur_alias: "Entepreneur"
+	concept_tec_worker_job_tec_entepreneur_icon: "Entepreneur"
+	concept_tec_worker_job_tec_entepreneur_plural: "Entepreneurs"
+	concept_tec_worker_job_tec_entepreneur_plural_icon: "Entepreneurs"
+	concept_tec_worker_job_tec_entepreneur_desc: "§LEntepreneur jobs are ['concept_tec_worker_job_clerk_icon'] version of some specialist jobs that provide extra resources based on their type, aside from $tec_loc_trade$.§!"
+ # /
  # Generic
 	concept_tec_ruler_job_standard: "Standard Ruler"
 	concept_tec_ruler_job_standard_alias: "Standard Ruler"
