Fixed decision to now show what AP is needed for em when specializing

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1764,8 +1764,9 @@
 	leader_trait_crusader_effect:0 "$ARMY_EFFECTS_TXT$:\n$t$Every Enemy Army Killed in Combat:\n$tt$§Y£empire£ $EMPIRE$§!:\n$ttt$£unity£ $unity$: §G+25§!"
 	leader_trait_crusader_2_effect:0 "$ARMY_EFFECTS_TXT$:\n$t$Every Enemy Army Killed in Combat:\n$tt$§Y£empire£ $EMPIRE$§!:\n$ttt$£unity£ $unity$: §G+40§!"
 
+	leader_trait_bellicose_effect:1 "$EMPIRE_EFFECTS_TXT$:\n$t$Every [Owner.GetLeaderSoldierJobType]:\n$tt$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+1§!\n$tt$$MOD_DEFENSE_ARMIES_ADD$: §G+1§!"
 
-# Debug
+	# Debug
  leader_trait_tec_debug_councilor: "DEBUG If YOU SEE SCREAM AT EVOLVED"
  leader_trait_tec_debug_councilor_desc: "DEBUG If YOU SEE SCREAM AT EVOLVED"
  leader_trait_tec_debug_non_councilor: "DEBUG If YOU SEE SCREAM AT EVOLVED"
