--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -190,16 +190,16 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 
  decision_tec_military_ecu:0 "Arcology - Military Ecumenopolis"
  decision_tec_military_ecu_desc:0 "By suiting this Ecumenopolis with specialized forges and military assets, we will make it serve well as a strategic defensive position while maintaining a good generation of £alloys£§YAlloys§!."
- decision_tec_military_ecu_effects:0 "Equips the Ecumenopolis with military districts, providing access to £alloys£ £district£ §YAlloy Generation Districts§! and £mod_country_naval_cap_add£ £district£ §YNaval Capacity Districts§!.\n\n§RDue to the effort used on the further modification of the planet assets and industry, this decision is irreversible.§!"
+ decision_tec_military_ecu_effects:0 "Equips the Ecumenopolis with military districts, providing access to £alloys£ £district£ §YAlloy Generation Districts§! and £mod_country_naval_cap_add£ £district£ §YNaval Capacity Districts§!.\n\n£job_soldier£ §Y$job_soldier_plural$§! will produce 1 extra £defense_army£ §YDefense Armies§! while producing 1 less §Y$tec_loc_naval_cap$§!.\n\nThis district can further be specialized to inverse the prior effect.\n\n§RDue to the effort used on the further modification of the planet assets and industry, this decision is irreversible.§!"
 
  #subdecisions
 	decision_tec_military_naval:0 "Arcology - Naval Docks"
 	decision_tec_military_naval_desc:0 "A further effort can be made to create naval installations that will provide some space for fleet command, pilots training and ships drydocking, making the ecumenopolis a key point for fleet managing."
-	decision_tec_military_naval_effects:0 "Replace £district£ §YGarrison Military Districts§! with £district£ §YNaval Docks Districts§!.\n£district£ §YNaval Docks Districts§! increase §YShip Building Speed§!.\n\n£job_soldier£ §Y$job_soldier_plural$§! will produce 2 extra §Y$tec_loc_naval_cap$§! while producing 2 less £defense_army£ §YDefense Armies§!."
+	decision_tec_military_naval_effects:0 "Replace £district£ §YGarrison Military Districts§! with £district£ §YNaval Docks Districts§!.\n£district£ §YNaval Docks Districts§! increase §YShip Building Speed§!.\n\n£job_soldier£ §Y$job_soldier_plural$§! will produce 1 extra §Y$tec_loc_naval_cap$§! while producing 1 less £defense_army£ §YDefense Armies§!."
 
 	decision_tec_military_garrison:0 "Arcology - Military Garrisons"
 	decision_tec_military_garrison_desc:0 "A further effort can be made to dismantle naval installations and making room for more military garrions and fortresses, making the ecumenopolis stronger to foreing invasions."
-	decision_tec_military_garrison_effects:0 "Replace £district£§YNaval Docks Districts§! with £district£ §YGarrison Military Districts§!.\n£district£§YGarrison Military Districts§! reduce §Y$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§!.\n\n£job_soldier£ §Y$job_soldier_plural$§! will produce 2 extra £defense_army£ §YDefense Armies§! while producing 2 less §Y$tec_loc_naval_cap$§!."
+	decision_tec_military_garrison_effects:0 "Replace £district£§YNaval Docks Districts§! with £district£ §YGarrison Military Districts§!.\n£district£§YGarrison Military Districts§! reduce §Y$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§!.\n\n£job_soldier£ §Y$job_soldier_plural$§! will produce 1 extra £defense_army£ §YDefense Armies§! while producing 1 less §Y$tec_loc_naval_cap$§!."
 
 
  decision_tec_science_ecu:0 "Arcology - Academic Ecumenopolis"
