--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -160,6 +160,8 @@
 	decision_tec_ecoarcology_blocker_tweaks:0 "£trigger_no£ §RRequires NO £blocker£ Blockers on the planet, unless the empire §YBenefits§! from them."
 
 	decision_tec_ecoarcology_require_mastery_of_nature:0 "£trigger_no£ §RRequires the $ap_mastery_of_nature$ ascension for specializing the Ecoworld."
+	decision_tec_arcology_require_arcology_project:0 "£trigger_no£ §RRequires the $ap_arcology_project$ ascension for specializing the Ecumenopolis."
+	decision_tec_ring_spec_require_galactic_wonders_utopia:0 "£trigger_no£ §RRequires the $ap_galactic_wonders_utopia$ ascension for specializing the Ringworld."
 
 	decision_tec_ecoarcology_no_swarm:0 "£trigger_no£ §RWe want to devour, not preserve the biosphere of a planet."
 
