--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -282,3 +282,4 @@
 building_archaeostudies_faculty_relic_effect:0 "If built on a §YRelic World§! or §YRestored Ecumenopolises§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.25§![TecGPMArchaeostudiesCompat]"
 building_archaeostudies_faculty_relic_gpm_effect: "\nIf built on an §YAncient Archaeopolis World§!:\n Research Speed (Archaeostudies): §G+100%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.5§!"
 
+ADD_NAVAL_CAPACITY_FROM_SOLDIERS:0 "Naval Capacity from Soldier Jobs: §G+1§!"
